--- a/frontend-angular/src/index.html
+++ b/frontend-angular/src/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="utf-8">
-  <title>Biblioteca - Sistema de Gestión de Libros</title>
+  <title>BiblioHub - Catálogo de Libros</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
